# kane

pepperBot/PeppaBot-main/: CMakeLists.txt  package.xml  setup.cfg  setup.py  testing
pepperBot/PeppaBot-main/launch/: peppabot_launch.py
pepperBot/PeppaBot-main/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
pepperBot/PeppaBot-main/launch/log/: latest_build
pepperBot/PeppaBot-main/maps/: my_cartographer_remap.pgm  my_cartographer_remap.yaml
pepperBot/PeppaBot-main/src/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  peppabot_node.cpp
pepperBot/PeppaBot-main/src/ament_cmake_core/: package.cmake  peppabotConfig.cmake
pepperBot/PeppaBot-main/src/ament_cmake_core/stamps/: package.xml.stamp
pepperBot/PeppaBot-main/src/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
pepperBot/PeppaBot-main/src/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
pepperBot/book_database/: CMakeLists.txt  Doxyfile  package.xml
pepperBot/book_database/html/: annotated.html  classCylinderDetector-members.html  classCylinderDetector.html  classCylinderDetector__inherit__graph.map  classCylinderDetector__inherit__graph.md5  classes.html  cylinder__detector_8cpp.html  cylinder__detector_8cpp__incl.map  cylinder__detector_8cpp__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html
pepperBot/book_database/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
pepperBot/book_database/latex/: annotated.tex  classCylinderDetector.tex  classCylinderDetector__inherit__graph.md5  cylinder__detector_8cpp.tex  cylinder__detector_8cpp__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex
pepperBot/book_database/src/: book_database.cpp
pepperBot/book_database/srv/: BorrowBook.srv
src/move_pepper/: package.xml  setup.cfg  setup.py
src/move_pepper/launch/: library4.launch.py  nav2.launch.py
src/move_pepper/maps/: map.yaml
src/pepper_autonomy/: CMakeLists.txt  package.xml
src/pepper_autonomy/include/: autonomy_node.h  navigation_behaviors.h
src/pepper_autonomy/launch/: autonomy.launch.py
src/pepper_autonomy/src/: autonomy_node.cpp  navigation_behaviors.cpp  object_detector.cpp
src/turtlebot3/: waffle_pi.yaml.txt
turtlebot3_ws/install/: local_setup.sh  setup.sh
turtlebot3_ws/install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
turtlebot3_ws/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  (+2 more)
turtlebot3_ws/log/: latest_build
turtlebot3_ws/src/tb3_sim/: package.xml  setup.py
turtlebot3_ws/src/tb3_sim/launch/: nav2.launch.py  turtlebot3_world.launch.py
turtlebot3_ws/src/tb3_sim/tb3_sim/: set_init_amcl_pose.py
(+488 files in other folders)
